@@ -158,7 +158,22 @@ section: design
     </div>
   </div>
   <div class="w49 aligncenter flex-self-vcenter">
-    <pre class=" language-markup"><code>&lt;div class="block-info-standard"&gt;
+    <pre class=" language-markup"><code>&lt;div class="<strong>block-info-standard</strong>"&gt;
+  Here a block with important information.&lt;br&gt;
+  Lorem ipsum dolor si amet.
+&lt;/div&gt;
+</code></pre>
+  </div>
+</div>
+<div class="flex flex-spacebetween mb2 onmobile-flex-column">
+  <div class="w49 pt0-5">
+    <div class="block-info-standard-error">
+      Here a block with important information. <br>
+      Lorem ipsum dolor si amet.
+    </div>
+  </div>
+  <div class="w49 aligncenter flex-self-vcenter">
+    <pre class=" language-markup"><code>&lt;div class="<strong>block-info-standard-error</strong>"&gt;
   Here a block with important information.&lt;br&gt;
   Lorem ipsum dolor si amet.
 &lt;/div&gt;
@@ -174,7 +189,7 @@ section: design
     </div>
   </div>
   <div class="w49 aligncenter flex-self-vcenter">
-    <pre class=" language-markup"><code>&lt;div class="block-info"&gt;
+    <pre class=" language-markup"><code>&lt;div class="<strong>block-info</strong>"&gt;
   Here a block with important information.&lt;br&gt;
   Lorem ipsum dolor si amet.
 &lt;/div&gt;
@@ -190,7 +205,7 @@ section: design
     </div>
   </div>
   <div class="w49 aligncenter flex-self-vcenter">
-    <pre class=" language-markup"><code>&lt;div class="block-info-error"&gt;
+    <pre class=" language-markup"><code>&lt;div class="<strong>block-info-error</strong>"&gt;
   Here a block with important information.&lt;br&gt;
   Lorem ipsum dolor si amet.
 &lt;/div&gt;
@@ -206,7 +221,7 @@ section: design
     </div>
   </div>
   <div class="w49 aligncenter flex-self-vcenter">
-    <pre class=" language-markup"><code>&lt;div class="block-info-warning"&gt;
+    <pre class=" language-markup"><code>&lt;div class="<strong>block-info-warning</strong>"&gt;
   Here a block with important information.&lt;br&gt;
   Lorem ipsum dolor si amet.
 &lt;/div&gt;
