@@ -7,6 +7,7 @@
 ## Updated/fixes
 
 - added disabled styles for `radio`/`checkbox`
+- added new color on `block-info-standard`: `block-info-standard-error`
 
 # [1.4.4] - 2019-03-15
 
